Improve build and activate test coverage check + checkstyle.